home page modification

--- a/index.html
+++ b/index.html
@@ -6,31 +6,34 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     <section class="home">
-        <div class="navBar">
-            <div class="logo">
-                <h2>Mon<span class="carnet">Carnet</span></h2>
-            </div>
-            <div class="log">
-                <a href="login.html">login</a>
-            </div>
-        </div>
-        <div class="description">
-            <div class="text">
-                <div>
-                    <h1>UN OUTIL POUR LA SAUVERGADE DE VOS CONTACT LES PLUS IMPORTANT</h1>
-                    <p>Notre application de carnet électronique vous permet de capturer vos idées, de créer des listes de tâches et d'organiser votre vie numérique</p>
+        <div class="homeContainer">
+            <div class="navBar">
+                <div class="logo">
+                    <h2>Mon<span class="carnet">Carnet</span></h2>
                 </div>
-               
+                <div class="log">
+                    <a href="login.html">login</a>
+                </div>
             </div>
-            <div class="image">
-                <img src="zb-10242-boesner-zeichenbuch-tusche_600x600.jpg" alt="">
+            <div class="description">
+                <div class="text">
+                        <h1>UNE SOLUTION COMPLETE POUR LA GESTION EFFICACE DE VOTRE TEMPS ET DE VOS INFORMATIONS LES PLUS PRECIEUSE</h1>
+                        <p><span>savoir plus</span> <i class="fa fa-long-arrow-right" aria-hidden="true"></i></p>
+                </div>
             </div>
         </div>
+        
     </section>
 </body>
 </html>
